# BookProject

./: CMakeLists.txt
src/: main.cpp
src/Book/: book.cpp  book.hpp
src/CBook/: cbook.cpp  cbook.hpp
src/CLibrary/: clibrary.cpp  clibrary.hpp
src/CScenario/: CScenario.cpp  CScenario.hpp
